Add filtering to fault results (#48)
Add the possibility to filter the fault results.
Change default fault mode to FULL for paged fault results.
Add 2 endpoints to return fault types and limit violation types.
Some codde cleaning and refactoring.

Signed-off-by: Florent MILLOT <millotflo@gmail.com>